註解 如何取得名字

--- a/web/index.html
+++ b/web/index.html
@@ -66,6 +66,7 @@
       let ws = null;
 
       const logEl = document.getElementById("log");
+      // 先解決拿到 進入房間的人的名字，把那人的名字做為參數連同websocket一起傳送
       const nameEl = document.getElementById("name");
       const msgEl = document.getElementById("msg");
       const connectBtn = document.getElementById("connectBtn");
